policycoreutils: Remove genhomedircon and alias to semodule
make it a symlink of semodule, then force -B -n into options.

Signed-off-by: Eric Paris <eparis@redhat.com>

--- a/policycoreutils/semodule/Makefile
+++ b/policycoreutils/semodule/Makefile
@@ -22,8 +22,10 @@ semodule: $(SEMODULE_OBJS)
 install: all
 	-mkdir -p $(SBINDIR)
 	install -m 755 semodule $(SBINDIR)
+	(cd $(SBINDIR); ln semodule genhomedircon)
 	test -d $(MANDIR)/man8 || install -m 755 -d $(MANDIR)/man8
 	install -m 644 semodule.8 $(MANDIR)/man8/
+	install -m 644 genhomedircon.8 $(MANDIR)/man8/
 
 relabel:
 
